# knowledge_plane_app

./: .dockerignore  .env.example  .env.template  .gitignore  CLAUDE.md  Dockerfile  KANBAN_DONE.md  KANBAN_IN_PROGRESS.md  KANBAN_REVIEW.md  LINTING-PLAN.md  PRODUCT_BACKLOG.md  README.md  SESSION_SUMMARY.md  SLICE_0_TASKS.md  SLICE_1_TASKS.md  SLICE_2_TASKS.md  SLICE_3_TASKS.md  SLICE_4_TASKS.md  SLICE_5_TASKS.md  SLICE_6_TASKS.md  SLICE_7_TASKS.md  SLICE_8_KICKOFF_SUMMARY.md  SLICE_8_TASKS.md  TECHNICAL_ARCHITECTURE.md  api-router-test-plan.md  context-panel-test-plan.md  count_lines.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  seed_pi_data.py  setup.py
knowledgeplan-backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
knowledgeplan-backend/app/: main.py
knowledgeplan-backend/app/api/: api.py
knowledgeplan-backend/app/api/endpoints/: auth.py  goals.py  map.py  projects.py
knowledgeplan-backend/app/api/routers/: __init__.py  auth.py  insights.py  integrations.py  projects.py
knowledgeplan-backend/app/api/v1/: api.py
knowledgeplan-backend/app/api/v1/endpoints/: auth.py  briefings.py  goals.py  graph.py  integrations.py  map.py  projects.py  teams.py  users.py
knowledgeplan-backend/app/core/: config.py  neighbour_cache.py  security.py
knowledgeplan-backend/app/crud/: __init__.py  crud_edge.py  crud_goal.py  crud_knowledge_asset.py  crud_node.py  crud_project.py  crud_team.py  crud_tenant.py  crud_user.py
knowledgeplan-backend/app/db/: session.py
knowledgeplan-backend/app/db/migrations/versions/: 016f196dbf5a_add_team_model_and_relationship_to_user.py  12819ed4b9bd_initial_migration_create_tenants_and_.py  1af39b5fb3bc_add_notes_table.py  2d117f7393a2_add_project_goal_knowledgeasset_models.py  3a1b2c3d4e5f_add_nodes_edges_tables.py  (+3 more)
knowledgeplan-backend/app/models/: __init__.py  department.py  goal.py  knowledge_asset.py  project.py  team.py  tenant.py  user.py
knowledgeplan-backend/app/schemas/: __init__.py  activity_log.py  briefing.py  department.py  goal.py  knowledge_asset.py  map.py  project.py  team.py  tenant.py  token.py  user.py
knowledgeplan-backend/app/services/: __init__.py  briefing_service.py  entity_recognition_service.py  google_calendar.py  insight_service.py  llm_service.py
knowledgeplan-backend/scripts/: seed_data.py
(+863 files in other folders)
